htmlcss/style.css
body{
top: 0px;
right: 0px;
bottom: 0px;
left: 0px;
width: 100%;
height: 100%;
margin: auto;
font-family: Arial;
}

#header{
border: 1px solid black;
width: 100%;
height: 120px;
background: #202020;
text-align: center
}

#wrapper{
width: 800px;
height: auto;
margin: 0px auto;
}

#main{
height: 300px;
}

#footer{
height: 50px;
font-size: 14px;
border-top: 1px solid grey;
text-align: center;
}

#nav{
position: relative;
top: -25px;
left: 250px;
font-size: 14px;
}

#nav ul li{
border: 1px solid black;
list-style-type: none;
display: inline;
padding: 3px 8px 3px 8px;
background: #99ff99;
font-family: Pristina;
font-size: 21px;
color: black;
}

#main img{
border: 1px solid grey;
}

#logo{
position: relative;
top: 25px;
left: -250px;
}

#table1{
width: 750px;
height: 250px;
table-layout: fixed;
margin-left: 20px;
}

#table1 td{
text-align: left;
background: #d8d8d8;
font-size: 14px;
padding: 15px;
border-radius: 10px;
-moz-border-radius: 10px;
box-shadow: 0px 0px 10px #000000;
-moz-box-shadow: 0px 0px 10px #000000;
}

#table1 h3{
text-align: center;
font-family: Pristina;
font-size: 20px;
}

#nav a{
text-decoration: none;
}

#nav a:hover{
color: black;
}

#nav a:visted{
color: black;
}

#nav a:active{
color: black;
}

.dark{
opacity: 0.6;
-moz-opacity: 0.6;
filter:alpha(opacity=60);
}

#table1 td a{
color: green;
}

